--- a/.github/workflows/backend-simple.yml
+++ b/.github/workflows/backend-simple.yml
@@ -102,13 +102,13 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: priya720
+          password: Sandy@100!
 
       - name: Tag and push image to Docker Hub
         run: |
           IMAGE=backend:${{ env.IMAGE_TAG }}
-          REPO=${{ secrets.DOCKERHUB_USERNAME }}/backend
+          REPO=priya720/backend
           docker tag "$IMAGE" "$REPO:${{ env.IMAGE_TAG }}"
           docker tag "$IMAGE" "$REPO:latest"
           docker push "$REPO:${{ env.IMAGE_TAG }}"
