--- a/Kubernetes-Manifests-file/Frontend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Frontend/deployment.yaml
@@ -21,14 +21,12 @@ spec:
       labels:
         role: frontend
     spec: 
-      imagePullSecrets:
-      - name: ecr-registry-secret
       containers:
       - name: frontend
-        image: 407622020962.dkr.ecr.us-east-1.amazonaws.com/frontend:3
-        imagePullPolicy: Always
-        env:
-          - name: REACT_APP_BACKEND_URL
-            value: "http://amanpathakdevops.study/api/tasks"
-        ports:
-        - containerPort: 3000
+      image: priya720/frontend:3
+      imagePullPolicy: Always
+      env:
+        - name: REACT_APP_BACKEND_URL
+          value: "http://amanpathakdevops.study/api/tasks"
+      ports:
+      - containerPort: 3000
