--- a/.github/workflows/database-deploy.yml
+++ b/.github/workflows/database-deploy.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Update kubeconfig for EKS
         run: |
-          aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
+          aws eks update-kubeconfig --name dev --region ap-south-1
 
       - name: Ensure namespace exists
         run: |
