--- a/Kubernetes-Manifests-file/Database/secrets.yaml
+++ b/Kubernetes-Manifests-file/Database/secrets.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: Secret
-metadata: 
-  namespace: three-tier
+metadata:
   name: mongo-sec
+  namespace: three-tier
 type: Opaque
-data:  
-  password: cGFzc3dvcmQxMjM=   #Three-Tier-Project
-  username: YWRtaW4= #admin
+data:
+  # default: admin
+  username: YWRtaW4=
+  # default: password123
+  password: cGFzc3dvcmQxMjM=
