--- a/Kubernetes-Manifests-file/Database/service.yaml
+++ b/Kubernetes-Manifests-file/Database/service.yaml
@@ -1,13 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: three-tier
   name: mongodb-svc
+  namespace: three-tier
+  labels:
+    app: mongodb
 spec:
   selector:
     app: mongodb
   ports:
-  - name: mongodb-svc
-    protocol: TCP
-    port: 27017
-    targetPort: 27017
+    - name: mongodb
+      protocol: TCP
+      port: 27017
+      targetPort: 27017
+  type: ClusterIP
