--- a/.github/workflows/backend-simple.yml
+++ b/.github/workflows/backend-simple.yml
@@ -85,6 +85,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: docker
     steps:
+      - uses: actions/checkout@v4
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
